# classio

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
classio/: __init__.py  constants.py  declario.py  inference.py
tests/: test_classio.py  test_declario.py  test_declario_arrays.py  test_declario_mashumaro.py  test_ml_example.py
