[project]
name = "classio"
version = "0.0.2"
description = "IO tools for python classes."
authors = [{ name = "Zach Kurtz", email = "zkurtz@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "dummio >=1.0.0",
  "packio >=0.0.2",
]

[dependency-groups]
dev = [
  "pre-commit >=3.8.0",
  "pyright >=1.1.378",
  "ruff >=0.6.3",
  "pytest >=8.3.2",
  "pandas >=2.0.0",
  "fastparquet>=2024.11.0",
]

[project.urls]
Source = "https://github.com/zkurtz/classio"

[tool.uv]
package = true

[tool.ruff]
line-length = 120

[tool.pyright]
include = ["classio", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
